# llm-canary

./: .gitignore  .llm-canary.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: canary.yml
examples/: .llm-canary.example.yml
llm_canary/: __init__.py  cli.py  core.py  report.py
llm_canary/suites/json-reliability/: 01_json_output.yml
llm_canary/suites/reasoning/: 01_logical_reasoning.yml
llm_canary/suites/universal-v1/: 01_basic_consistency.yml  02_instruction_following.yml  README.md
tests/: test_core.py
