[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-canary"
version = "2.0.0"
description = "Behavioral drift detector for LLM APIs — catch silent model changes before they break production"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["llm", "ai", "testing", "drift-detection", "openai", "anthropic", "google", "mistral", "cohere", "groq", "ollama", "azure", "bedrock", "monitoring"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "pyyaml>=6.0",
  "requests>=2.28",
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2"]
bedrock = ["boto3>=1.34"]
dev = ["pytest", "pytest-cov", "black", "ruff"]

[project.scripts]
llm-canary = "llm_canary.cli:main"

[project.urls]
Homepage = "https://github.com/arjinexe/llm-canary"
Repository = "https://github.com/arjinexe/llm-canary"
Issues = "https://github.com/arjinexe/llm-canary/issues"
Changelog = "https://github.com/arjinexe/llm-canary/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_canary*"]

[tool.setuptools.package-data]
"llm_canary" = ["suites/**/*.yml", "suites/**/*.yaml", "suites/**/*.md", "py.typed"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
